update dependency on render_html to allow label "for" attribute which is a keyword in python

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,8 @@ package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.12"
-pixyverse-render-html = "^0.1.0"
 flask = "^3.0.3"
+pixyverse-render-html = {path = "../render_html"}
 
 
 [tool.poetry.group.dev.dependencies]
