Minimal persistence setup with sqlite

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ package-mode = false
 python = "^3.12"
 flask = "^3.0.3"
 pixyverse-render-html = {path = "../render_html"}
+flask-sqlalchemy = "^3.1.1"
 
 
 [tool.poetry.group.dev.dependencies]
